--- a/cuisson_sousvide_app/app/src/main/res/layout/activity_connection.xml
+++ b/cuisson_sousvide_app/app/src/main/res/layout/activity_connection.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:text="@string/connection"
+        android:text="@string/connecting"
         android:textSize="30sp"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
